[package]
name = "wasm"
version = "0.1.0"
authors = ["math132d <majohha@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.58"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.rust_perlin]
path = "D:/Mathias/Documents/Rust/rust_perlin"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"